force-app/main/default/objects/custom_create2__c/custom_create2__c.object-meta.xml
<CustomObject>
    <label>Custom created object2</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>