force-app/main/default/objects/custom_create2__c/fields/custom_create_2field579__c.field-meta.xml
<CustomField>
    <fullName>custom_create_2field579__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 2field579</label>
    <type>Checkbox</type>
</CustomField>