force-app/main/default/objects/custom_create2__c/fields/custom_create_2field624__c.field-meta.xml
<CustomField>
    <fullName>custom_create_2field624__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 2field624</label>
    <type>Checkbox</type>
</CustomField>